automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1 {color:blue;font-size:13;}
 
 
 body {
-      background-color: lightblue;
+      background-color: #C3423F;
       font-size: 150%;
     }
 
