automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1 {color:blue;font-size:13;}
 
 
 body {
-      background-color: #A10702;
-      font-size: 150%;
+      background-color: #BEA7D3;
+      font-size: 15000000%;
     }
 
