automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,6 @@ h1 {color:blue;font-size:13;}
 
 body {
       background-color: #BEA7D3;
-      font-size: 15000000%;
+      font-size: 1%;
     }
 
