automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ h1 {color:blue;font-size:13;}
 
 
 .myClass
-{background-color:gray;
+{background-color:red;
   font-size:30%;
 }
 
 
 
 body {
-      background-color: #BEA7D3;
+      background-color: red;
       font-size: 170%;
     }
 
