--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,20 @@
 h1 {color:blue;font-size:13;}
 
 .example { 
-  color:red;
+  color:#0D1321;
   font-size:32px;
 }
 
 
 .myClass
-{background-color:;
+{background-color:#0D1321;
   font-size:30%;
 }
 
 
 
 body {
-      background-color: red;
+      background-color: rainbow;
       font-size: 170%;
     }
 
