automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {color:blue;font-size:13;}
 
 
 body {
-      background-color: rainbow;
+      background-color: #0D1321;
       font-size: 170%;
     }
 
