--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ h1 {color:blue;font-size:13;}
 
 .myClass
 {
-  border:#09264A;
+  border-style: solid;
+  border-width: medium; 
+  border-color: ;#09264A;
   font-size:30%;
 }
 
