automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h1 {color:blue;font-size:13;}
 {
   border-style: solid;
   border-width: medium; 
-  border-color: ;#09264A;
+  border-color: #09264A;
   font-size:30%;
 }
 
